Fix typo for form input label

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <dd>
 <input type='text' name='' value='' /></dd>
 <dt>
-<label>Last Name*</label>§
+<label>Last Name*</label>
 </dt>
 <dd>
 <input type='text' name='' value='' /></dd>
